@@ -123,6 +123,8 @@ bzr development version
     * Changed branch.set_parent() to accept None to remove parent.
       (Olaf Conradi)
 
+    * Deprecated BzrError AmbiguousBase.  (Olaf Conradi)
+
   TESTING:
 
     * SFTP tests now shortcut the SSH negotiation, reducing test overhead
